fix overflow and incentive link

--- a/apps/nextjs/components/Footer/Footer.module.scss
+++ b/apps/nextjs/components/Footer/Footer.module.scss
@@ -36,6 +36,12 @@
       {
         text-decoration: underline !important;
       }
+      
+      @include breakpoint($sm-zero-only) {
+        flex-direction: column;
+        align-items: center;
+        gap: 8px;
+      }
     }
   }
 }
